# react-monorepo

./: .dockerignore  .env.docker.example  .envrc  .gitignore  .infisical.json  AGENTS.md  README.md  biome.jsonc  devenv.nix  docker-compose.yml  flake.nix  lefthook.yml  opencode.json  package.json  turbo.json
.github/workflows/: lint-convex.yml  lint-scraper.yml  lint-shared.yml  lint-ui.yml  lint-web.yml  lint-worker.yml  lint.yml
.omo/run-continuation/: ses_1575075c7ffe6pOvSiFhaT6Wtk.json
apps/convex/: Dockerfile  README.md  package.json
apps/convex/convex/: messages.test.ts  messages.ts  scrapes.test.ts
apps/desktop/: README.md  index.html  package.json  tsconfig.json  turbo.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: README.md  app.json  babel.config.js  biome.jsonc  package.json  tailwind.config.ts  tsconfig.json
apps/pocketbase/: Dockerfile  docker-compose.yml  package.json  pocketbase-types.ts
apps/scraper/: README.md  package.json  pyproject.toml  turbo.json
apps/scraper-crawl4ai/: README.md  pyproject.toml
apps/scraper-crawl4ai/src/scraper_crawl4ai/: main.py
apps/scraper-crawl4ai/tests/: test_main.py
apps/scraper/src/scraper/: convex_client.py  crawler.py  main.py
apps/scraper/tests/: test_convex_client.py  test_crawler.py  test_main.py
apps/service/: README.md  index.test.ts  index.ts  package.json  tsconfig.json
apps/web/: Dockerfile  README.md  components.json  env.ts  next.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  turbo.json  vitest.config.ts
apps/worker/: Dockerfile  index.test.ts  index.ts  package.json  turbo.json
databases/convex/: Dockerfile  README.md  package.json  tsconfig.json
databases/pocketbase/: Dockerfile  NOTES.md  docker-compose.yml  package.json  pocketbase-migrate.config.js  pocketbase-types.ts
docs/: environment.md
(+48 files in other folders)
