[project]
name = "scraper-crawl4ai"
version = "0.1.0"
description = "Crawl4AI scraper app for structured and LLM-assisted extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "scraper-crawl4ai-core",
]

[project.scripts]
scraper-crawl4ai = "scraper_crawl4ai.main:main"

[tool.uv.sources]
scraper-crawl4ai-core = { path = "../../packages/scraper-crawl4ai-core" }

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper_crawl4ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
