[project]
name = "scraper"
version = "0.1.0"
description = "Crawl4AI scraper app for structured and LLM-assisted extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "crawl4ai>=0.8.0",
  "litellm>=1.79.0",
]

[project.scripts]
scraper = "scraper.main:main"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
