[package]
name = "desktop"
version = "0.1.0"
description = "Tauri desktop app for react-monorepo"
authors = ["Fractal-Tess"]
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = { version = "=2.0.0-rc.22" }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
tauri = { version = "2.0", features = [] }
